--- a/playbooks/dns.yml
+++ b/playbooks/dns.yml
@@ -7,7 +7,7 @@
 #   ansible-playbook playbooks/dns.yml
 
 - name: Configure OPNsense DNS
-  hosts: routers
+  hosts: dns_servers
   gather_facts: false
   roles:
     - opnsense_dns
